welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
	def tache() {
		avance();
		baisseBrosse();
		leveBrosse();
		y= y+1;
		avance();
	}
	
	def canvas() {
		for (x<-0 to 3) {
			for (x<-0 to 1) {
				tache()
			}
			gauche()
		}

		gauche();
		avance();
		droite();
		avance();

		for (x<-0 to 3) {
			tache();
			gauche();
		}
		recule();
		droite();
		avance();
		gauche();
	}
}
